<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_ramp_sim</name>
  <version>0.0.0</version>
  <description>The turtlebot3_ramp_sim package</description>

  <maintainer email="hope@todo.todo">hope</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
